--- a/views/page.erb
+++ b/views/page.erb
@@ -1,6 +1,54 @@
 <html>
   <head>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <style>
+      .catalog {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: flex-end;
+      }
+      .book {
+        list-style: none;
+        position: relative;
+      }
+      .feed {
+        position: absolute;
+        top: 33%;
+        left: 33%;
+        color: rgba(0, 0, 0, 0.4);
+        font-size: 200%;
+      }
+      .book:hover .feed,
+      .book:focus .feed {
+        color: rgb(0, 0, 0);
+      }
+      .play {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        color: rgba(0, 0, 0, .4);
+      }
+      .book:hover .play,
+      .book.focus .play {
+        color: rgb(0, 0, 0);
+      }
+      .duration {
+        bottom: 10px;
+        right: 10px;
+        position: absolute;
+        font-weight: bold;
+        color: rgba(255, 255, 255, 0.4);
+        font-family: sans-serif;
+        font-size: 120%;
+      }
+      .book:hover .duration,
+      .book:focus .duration {
+        color: rgb(255, 255, 255);
+      }
+      .book + .book {
+        margin-left: 20px;
+      }
       img {
         max-width: 200px;
       }
