--- a/views/book_list.erb
+++ b/views/book_list.erb
@@ -14,7 +14,10 @@
           </span>
         </a>
         <a class="play" href="<%= "#{url}.m3u" %>" title="Listen to '' online">
-          <i class="fa fa-play-circle fa-2x"></i>
+          <span class="fa-stack">
+            <i class="fa fa-circle fa-stack-2x"></i>
+            <i class="fa fa-play fa-inverse fa-stack-1x"></i>
+          <span>
         </a>
         <div class="duration">
           <%= duration_in_hours_and_minutes(book_duration(dir_entries(book))) %>
