--- a/views/page.erb
+++ b/views/page.erb
@@ -14,7 +14,7 @@
       }
       .feed {
         position: absolute;
-        top: 33%;
+        bottom: 80px;
         left: 33%;
         color: rgba(0, 0, 0, 0.4);
         font-size: 200%;
@@ -25,22 +25,26 @@
       }
       .play {
         position: absolute;
-        top: 10px;
-        right: 10px;
+        bottom: 10px;
+        left: 10px;
         color: rgba(0, 0, 0, .4);
+      }
+      .play .fa-play {
+        left: 2px;
       }
       .book:hover .play,
       .book.focus .play {
         color: rgb(0, 0, 0);
       }
       .duration {
-        bottom: 10px;
+        bottom: 16px;
         right: 10px;
         position: absolute;
         font-weight: bold;
         color: rgba(255, 255, 255, 0.4);
         font-family: sans-serif;
         font-size: 120%;
+        text-shadow: #000 0 1px;
       }
       .book:hover .duration,
       .book:focus .duration {
