--- a/views/book_list.erb
+++ b/views/book_list.erb
@@ -2,25 +2,26 @@
   <h2>Books</h2>
 <% end %>
 <ul class="catalog">
-  <% for book in @books %>
+  <% for book in @books.keys %>
     <% url = to_url(book) %>
-    <% img_url = to_url(book_image(dir_entries(book))) %>
+    <% img_url = to_url(book_image(@books[book])) %>
+    <% title =  book_title(@books[book]) %>
     <li class="book">
         <img src="<%= img_url %>"/>
-        <a class="feed" href="<%= "#{url}.rss" %>" title="Listen to '' in a podcatcher">
+        <a class="feed" href="<%= "#{url}.rss" %>" title="Listen to '<%= title %>' in a podcatcher">
           <span class="fa-stack fa-lg">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-rss fa-inverse fa-stack-1x"></i>
           </span>
         </a>
-        <a class="play" href="<%= "#{url}.m3u" %>" title="Listen to '' online">
+        <a class="play" href="<%= "#{url}.m3u" %>" title="Listen online to '<%= title %>'">
           <span class="fa-stack">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-play fa-inverse fa-stack-1x"></i>
           <span>
         </a>
         <div class="duration">
-          <%= duration_in_hours_and_minutes(book_duration(dir_entries(book))) %>
+          <%= duration_in_hours_and_minutes(book_duration(@books[book])) %>
         </div>
     </li>
   <% end %>
