--- a/views/book_list.erb
+++ b/views/book_list.erb
@@ -1,20 +1,17 @@
-<% unless @books.empty? %>
-  <h2>Books</h2>
-<% end %>
 <ul class="catalog">
   <% for book in @books.keys %>
     <% url = to_path(book) %>
     <% img_url = to_path(book_image(@books[book])) %>
-    <% title =  book_title(@books[book]) %>
+    <% title_and_author =  book_title_and_author(@books[book]) %>
     <li class="book">
         <img src="<%= img_url %>"/>
-        <a class="feed" href="<%= "#{url}.rss" %>" title="Listen to '<%= title %>' in a podcatcher">
+        <a class="feed" href="<%= "#{url}.rss" %>" title="Listen to '<%= title_and_author %>' in a podcatcher">
           <span class="fa-stack fa-lg">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-rss fa-inverse fa-stack-1x"></i>
           </span>
         </a>
-        <a class="play" href="<%= "#{url}.m3u" %>" title="Listen online to '<%= title %>'">
+        <a class="play" href="<%= "#{url}.m3u" %>" title="Listen online to '<%= title_and_author %>'">
           <span class="fa-stack">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-play fa-inverse fa-stack-1x"></i>
