--- a/views/book_list.erb
+++ b/views/book_list.erb
@@ -5,7 +5,7 @@
     <% title_and_author =  book_title_and_author(@books[book]) %>
     <li class="book">
         <img src="<%= img_url %>"/>
-        <a class="feed" href="<%= "#{url}.rss" %>" title="Listen to '<%= title_and_author %>' in a podcatcher">
+        <a class="feed" href="<%= "#{url}.opml" %>" title="Listen to '<%= title_and_author %>' in a podcatcher">
           <span class="fa-stack fa-lg">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-rss fa-inverse fa-stack-1x"></i>
