--- a/views/page.erb
+++ b/views/page.erb
@@ -48,18 +48,21 @@
         color: rgb(0, 0, 0);
       }
       .duration {
-        bottom: 16px;
+        bottom: 11px;
         right: 10px;
         position: absolute;
         font-weight: bold;
         color: rgba(255, 255, 255, 0.4);
         font-family: sans-serif;
         font-size: 120%;
-        text-shadow: #000 0 1px;
+        padding: 4px 6px;
+        border-radius: 8px;
+        background-color: rgba(0, 0, 0, .4);
       }
       .book:hover .duration,
       .book:focus .duration {
         color: rgb(255, 255, 255);
+        background-color: #000;
       }
       .book {
         margin: 10px;
