- Set book height.

--- a/views/page.erb
+++ b/views/page.erb
@@ -21,7 +21,8 @@
         list-style: none;
         position: relative;
         width: 240px;
-        flex-basis: auto;
+        height: 366px;
+        margin: 10px;
       }
       .feed {
         position: absolute;
@@ -63,11 +64,10 @@
       .book:focus .duration {
         background-color: #000;
       }
-      .book {
-        margin: 10px;
-      }
       img {
         width: 100%;
+        position: absolute;
+        bottom: 0;
       }
     </style>
   </head>
