- Support both podcast:// and downcast:// schemes with the support of JS.

--- a/views/page.erb
+++ b/views/page.erb
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Audiobooks as Podcasts</title>
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
     <style>
       .catalog {
         display: -webkit-flex;
@@ -79,6 +80,19 @@
       ga('create', 'UA-168047-7', 'auto');
       ga('require', 'displayfeatures');
       ga('send', 'pageview');
+    </script>
+    <script>
+      $('.feed').click(function (e) {
+        e.stopPropagation();
+        var podcastURL = e.target.href;
+        var downcastURL = podcastURL.replace(/^podcast/, 'downcast');
+        setTimeout(function () {
+          document.location = downcastURL;
+        }.bind(this), 0);
+        setTimeout(function () {
+          document.location = podcastURL;
+        }.bind(this), 300);
+      })
     </script>
   </body>
 </html>
