--- a/views/page.erb
+++ b/views/page.erb
@@ -86,12 +86,24 @@
         e.stopPropagation();
         var podcastURL = e.target.closest('a').href;
         var downcastURL = podcastURL.replace(/^podcast/, 'downcast');
-        setTimeout(function () {
-          document.location = downcastURL;
-        }.bind(this), 0);
-        setTimeout(function () {
-          document.location = podcastURL;
-        }.bind(this), 300);
+        if (window.navigator.userAgent.match(/^Mozilla\/5\.0 \((iP[oa]d|iPhone)/)) {
+          iframe = document.createElement('iframe');
+          iframe.setAttribute('style', 'display:none;');
+          iframe.setAttribute('src', downcastURL);
+          document.body.appendChild(iframe);
+          setTimeout(function () {
+            if (!document.hidden) {
+              iframe.setAttribute('src', podcastURL);
+            }
+          }.bind(this), 600);
+        } else {
+          setTimeout(function () {
+            document.location = downcastURL;
+          }.bind(this), 0);
+          setTimeout(function () {
+            document.location = podcastURL;
+          }.bind(this), 600)
+        }
       })
     </script>
   </body>
