--- a/views/page.erb
+++ b/views/page.erb
@@ -40,6 +40,7 @@
         flex-wrap: wrap;
         -webkit-align-items: flex-end;
         align-items: flex-end;
+        justify-content: center;
         padding: 0;
       }
       .book {
