--- a/views/books.handlebars
+++ b/views/books.handlebars
@@ -5,13 +5,13 @@
     {{#with image}}
         <img class="cover" src="{{dataUri}}" width="{{width}}" height="{{height}}"/>
     {{/with}}
-    <a class="feed" title="Listen to {{title}} by {{#each authors}}{{name}}{{/each}}">
+    <a class="feed" title="Listen to {{title}} by {{#each authors}}{{name}}{{/each}}" href="/{{name}}.rss">
         <span class="fa-stack fa-lg">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-rss fa-inverse fa-stack-1x"></i>
         </span>
     </a>
-    <a class="play">
+    <a class="play" href="/{{name}}.m3u">
         <span class="fa-stack">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-play fa-inverse fa-stack-1x"></i>
