--- a/views/books.handlebars
+++ b/views/books.handlebars
@@ -1,26 +1,5 @@
 <ul class="catalog">
 {{#each books}}
-    <li class="book">
-        <a href="/{{name}}" title="{{title}}">
-    {{#with image}}
-        <img class="cover" src="{{dataUri}}" width="{{width}}" height="{{height}}"/>
-    {{/with}}
-    <a class="feed" title="Listen to {{title}} by {{#each authors}}{{name}}{{/each}}" href="/{{name}}.rss">
-        <span class="fa-stack fa-lg">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-rss fa-inverse fa-stack-1x"></i>
-        </span>
-    </a>
-    <a class="play" href="/{{name}}.m3u">
-        <span class="fa-stack">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-play fa-inverse fa-stack-1x"></i>
-        <span>
-    </a>
-    <div class="duration">
-        {{formatDuration duration}}
-    </div>
-    </a>
-    </li>
+    {{> book}}
 {{/each}}
 </ul>
