--- a/views/m3u.handlebars
+++ b/views/m3u.handlebars
@@ -2,7 +2,7 @@
 
 {{#with book}}
 {{#each files}}
-#EXTINF:{{round duration}},{{../title}} - {{join ../authors ' & '}} - Episode {{@index}}
+#EXTINF:{{round duration}},{{../title}} - {{> authors ..}} - Episode {{@index}}
 {{url}}
 
 {{/each}}
