--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,5 +1,17 @@
-<div>
-    <a href="/"><span>home</span></a>
-    <a href="/categories"><span>categories</span></a>
-    <a href="/authors"><span>authors</span></a>
+<div class="footer">
+    <a href="/">
+        <span class="fa-stack">
+            <i class="fa fa-circle fa-stack-2x"></i>
+            <i class="fa fa-home fa-inverse fa-stack-1x"></i>
+        </span>home</a>
+    <a href="/categories">
+        <span class="fa-stack">
+            <i class="fa fa-circle fa-stack-2x"></i>
+            <i class="fa fa-folder fa-inverse fa-stack-1x"></i>
+        </span>categories</a>
+    <a href="/authors">
+        <span class="fa-stack">
+            <i class="fa fa-circle fa-stack-2x"></i>
+            <i class="fa fa-user fa-inverse fa-stack-1x"></i>
+        </span>authors</a>
 </div>
