--- a/public/screen.css
+++ b/public/screen.css
@@ -1,5 +1,9 @@
-.catalog {
-    display: -webkit-flex;
+body {
+    font-family: sans-serif;
+}
+
+.catalog,
+.footer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -56,7 +60,6 @@
     position: absolute;
     font-weight: bold;
     color: rgb(255, 255, 255);
-    font-family: sans-serif;
     font-size: 120%;
     padding: 4px 6px;
     border-radius: 8px;
@@ -66,4 +69,19 @@
 .book:hover .duration,
 .book:focus .duration {
     background-color: #000;
+}
+
+.footer a {
+    padding: 0 2em;
+}
+
+.authors li,
+.categories li {
+    list-style: none;
+}
+
+.authors .fa-stack,
+.categories .fa-stack,
+.footer .fa-stack {
+    margin-right: .5rem;
 }
