A bit more styling

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,17 +1,20 @@
 <div class="footer">
-    <a href="/">
+    <a href="/" title="Home">
         <span class="fa-stack">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-home fa-inverse fa-stack-1x"></i>
-        </span>home</a>
-    <a href="/categories">
+        </span>
+    </a>
+    <a href="/categories" title="Categories">
         <span class="fa-stack">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-folder fa-inverse fa-stack-1x"></i>
-        </span>categories</a>
-    <a href="/authors">
+        </span>
+    </a>
+    <a href="/authors" title="Authors">
         <span class="fa-stack">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-user fa-inverse fa-stack-1x"></i>
-        </span>authors</a>
+        </span>
+    </a>
 </div>
