--- a/public/screen.css
+++ b/public/screen.css
@@ -3,6 +3,7 @@ body {
 }
 
 .catalog,
+.header,
 .footer {
     display: flex;
     flex-direction: row;
@@ -72,7 +73,7 @@ body {
 }
 
 .footer a {
-    padding: 0 2em;
+    padding: 0 1rem;
 }
 
 .authors li,
@@ -81,7 +82,6 @@ body {
 }
 
 .authors .fa-stack,
-.categories .fa-stack,
-.footer .fa-stack {
+.categories .fa-stack {
     margin-right: .5rem;
 }
