Don't use {{{ for head/title

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
     {{{meta}}}
     <title>
       {{#if title }}
-        {{{title}}}
+        {{title}}
       {{/if}}
       {{#unless title }}
           Audiobooks as Podcasts
