--- a/views/partials/summary.handlebars
+++ b/views/partials/summary.handlebars
@@ -7,7 +7,13 @@
   <h4>Written/performed by:</h4>
   <ul class="authors">
     {{#each authors}}
-      <li><a href="/author/{{name}}">{{name}}</a></li>
+      <li>{{> author}}</li>
+    {{/each}}
+  </ul>
+  <h4>Filed under:</h4>
+  <ul class="categories">
+    {{#each categories}}
+      <li>{{> category}}</li>
     {{/each}}
   </ul>
 </div>
