--- a/views/partials/summary.handlebars
+++ b/views/partials/summary.handlebars
@@ -10,10 +10,12 @@
       <li>{{> author}}</li>
     {{/each}}
   </ul>
+  {{#if categories}}
   <h4>Filed under:</h4>
   <ul class="categories">
     {{#each categories}}
       <li>{{> category}}</li>
     {{/each}}
   </ul>
+  {{/if}}
 </div>
