--- a/views/books.handlebars
+++ b/views/books.handlebars
@@ -4,4 +4,12 @@
   {{> book}}
   {{/each}}
 </ul>
-<script src="/books.js"></script>
+<script type="module">
+  import { Api } from '/api.js'
+  Api.fetch('books')
+    .then((books) => {
+      const pre = document.createElement('pre')
+      pre.textContent = JSON.stringify(books, null, 2)
+      document.body.append(pre)
+    })
+</script>
