Rudimentary home page search

--- a/public/screen.css
+++ b/public/screen.css
@@ -110,6 +110,11 @@ body {
     width: 70%;
 }
 
+.hidden {
+    display: none;
+    visibility: hidden;
+}
+
 @media (min-width: 720px) {
     .catalog.solo {
         flex-wrap: nowrap;
