--- a/views/partials/book.handlebars
+++ b/views/partials/book.handlebars
@@ -1,4 +1,4 @@
-<li class="book">
+<li class="book" id="book-{{id}}">
   <a href="/{{name}}" title="{{title}}">
     {{#with image}}
     <img class="cover" src="{{dataUri}}" width="{{width}}" height="{{height}}" alt="{{title}} cover"/>
