--- a/views/partials/search.handlebars
+++ b/views/partials/search.handlebars
@@ -1,3 +1,5 @@
+{{#if by}}
 <div class="search">
-    <input type="text" placeholder="Search books"/>{{> stack icon="search"}}
+    <input data-by="{{by}}" type="text" placeholder="Search books" spellcheck="true"/>{{> stack icon="search"}}
 </div>
+{{/if}}
