Include authors in cover title

--- a/views/partials/book.handlebars
+++ b/views/partials/book.handlebars
@@ -1,5 +1,5 @@
 <li class="book" id="book-{{id}}">
-  <a href="/{{name}}" title="{{title}}">
+  <a href="/{{name}}" title="{{title}} by {{> authors}}">
     {{#with image}}
     <img class="cover" src="{{dataUri}}" width="{{width}}" height="{{height}}" alt="{{title}} cover"/>
     {{/with}}
