Load q query search param if present

--- a/views/books.handlebars
+++ b/views/books.handlebars
@@ -7,5 +7,5 @@
 <script>const corpus={{{corpus}}}</script>
 <script type="module">
   import { Search } from '/search.js'
-  new Search(corpus).listen()
+  new Search(corpus).listen().loadQueryParam()
 </script>
