--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -3,3 +3,8 @@
   {{> book solo=true}} {{> summary}}
   {{/with}}
 </ul>
+<script type="module">
+  import { Edit } from '/edit.js';
+
+  Edit.handleClick()
+</script>
