--- a/views/partials/summary.handlebars
+++ b/views/partials/summary.handlebars
@@ -1,6 +1,6 @@
 <div class="summary">
   {{#if description}}
-  <div class="description">
+  <div class="description editable">
     {{{description}}}
   </div>
   {{/if}}
