--- a/views/partials/summary.handlebars
+++ b/views/partials/summary.handlebars
@@ -1,9 +1,12 @@
 <div class="summary">
+  <div class="description" contenteditable="false">
   {{#if description}}
-  <div class="description editable">
     {{{description}}}
-  </div>
   {{/if}}
+  {{#unless desc}}
+     No description available
+  {{/unless}}
+  </div>
   
   <h4>Written/performed by:</h4>
   <ul class="authors">
