Fix description in summary

--- a/views/partials/summary.handlebars
+++ b/views/partials/summary.handlebars
@@ -3,7 +3,7 @@
   {{#if description}}
     {{{description}}}
   {{/if}}
-  {{#unless desc}}
+  {{#unless description}}
      No description available
   {{/unless}}
   </div>
