--- a/views/partials/summary.handlebars
+++ b/views/partials/summary.handlebars
@@ -1,5 +1,5 @@
 <div class="summary">
-  <div class="description" contenteditable="false">
+  <div class="description" data-field="description" contenteditable="false">
   {{#if description}}
     {{{description}}}
   {{/if}}
